# jarfi

./: .gitignore  Anchor.toml  CLAUDE.md  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: README.md  SUMMARY.md  contributing.md  dashboard.md  faq.md  getting-started.md  jar-types.md  operator-runbook.md  security.md  yield.md
jarfi-backend/: .env.example  .gitignore  db.js  groupService.js  idl.json  index.js  jarfi.db-shm  jarfi.db-wal  jupiterService.js  kaminoService.js  marinadeService.js  package-lock.json  package.json  scheduleService.js
jarfi-contract/: Anchor.toml
jarfi-mobile/: app.json  package-lock.json  package.json
jarfi-web/: .env.example  .gitignore  CLAUDE.md  README.md  jarfi-gift-page.html  next.config.js  package-lock.json  package.json  patch-worker.js  tailwind.config.js  wrangler.toml
programs/jarfi/: Cargo.toml  README.md
programs/jarfi/src/: constants.rs  errors.rs  events.rs  lib.rs  marginfi.rs  marinade.rs
programs/jarfi/src/instructions/: accept_admin.rs  cancel_jar.rs  close_contribution.rs  close_jar.rs  contribute_sol.rs  contribute_spl.rs  create_jar.rs  init_user_state.rs  initialize_config.rs  migrate_config_v2.rs  mod.rs  propose_admin.rs  refund.rs  update_config.rs  update_metadata.rs  withdraw.rs  withdraw_treasury.rs
programs/jarfi/src/state/: config.rs  contribution.rs  jar.rs  mod.rs  user_state.rs
scripts/: README.md  deploy-devnet.ts  faucet-usdc.ts  inspect-jar.ts  kamino-spike.ts  marinade-smoke.ts  migrate-config-v2.ts  migrate-config-v3.ts  save-marginfi-spike.ts  (+4 more)
(+226 files in other folders)
