[package]
name = "jarfi"
version = "0.1.0"
description = "jarfi: Solana savings jars"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jarfi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
